--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,6 +10,8 @@
         dest: /etc/issue }
     - { src: issue.net.j2,
         dest: /etc/issue.net.j2 }
+  tags:
+    - branding_welcome_msg
 
 - name: copy CZERTAINLY logo for plymouth
   ansible.builtin.copy:
@@ -18,6 +20,8 @@
   loop:
     - { src: czertainly.png,
         dest: /usr/share/plymouth/themes/spinner/background-tile.png }
+  tags:
+    - branding_plymouth
   notify: update-plymouth
 
 - name: copy CZERTAINLY logo for grub
@@ -27,6 +31,8 @@
   loop:
     - { src: czertainly.tga,
         dest: /boot/grub/czertainly.tga }
+  tags:
+    - branding_plymouth
   notify: update-grub
 
 - name: update /etc/defaults/grub with appliance name
@@ -34,6 +40,8 @@
     path: /etc/default/grub
     regex: '^GRUB_DISTRIBUTOR='
     line: 'GRUB_DISTRIBUTOR="CZERTAINLY Appliance ({{ czertainly_appliance_version }})"'
+  tags:
+    - branding_grub
   notify: update-grub
 
 - name: update /etc/defaults/grub with appliance name
@@ -42,4 +50,6 @@
     regex: '^GRUB_BACKGROUND'
     insertafter: '^GRUB_DISTRIBUTOR='
     line: "GRUB_BACKGROUND=/boot/grub/czertainly.tga"
+  tags:
+    - branding_grub
   notify: update-grub
